# IncidentWorkbench

./: .gitignore  AGENTS.md  IMPLEMENTATION_COMPLETE.md  PHASE1_README.md  PHASE1_VERIFICATION.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_SUMMARY.md  PHASE4_COMPLETE.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE5_VERIFICATION.md  QUICKSTART.md  README.md  VERIFY_PHASE3.md  index.html  package-lock.json  package.json  vite.config.ts
.codex/: verify.commands
.codex/bootstrap/: tests-docs.v1.json
.codex/scripts/: run_verify_commands.sh  setup_backend_env.sh
.github/workflows/: backend-ci.yml  release-gates.yml
backend/: Makefile  README.md  config.py  database.py  exceptions.py  main.py  pyproject.toml  pytest.ini  test_contract_api.py  test_e2e_phase4.py  test_helpers.py  test_integration.py  test_metrics_endpoint.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase4.py  test_phase5.py  utils.py
backend/api/: problem.py
backend/clients/: __init__.py  http.py
backend/docs/: auth-decision-record.md  backend-definition-of-done.md  migration-playbook.md
backend/migrations/: 001_initial_schema.sql  002_add_indexes.sql  003_fix_cluster_runs_id.sql  004_add_incident_fields.sql  005_update_reports_table.sql  006_reliability_tables.sql  007_auth_sessions.sql
backend/models/: __init__.py  api.py  cluster.py  incident.py  report.py
backend/observability/: __init__.py  bootstrap.py  context.py  logging.py  middleware.py
backend/routers/: __init__.py  auth.py  clusters.py  health.py  incidents.py  ingest.py  reports.py  settings.py  webhooks.py
backend/security/: __init__.py  auth.py  csrf.py  idempotency.py  rbac.py  settings.py
backend/services/: __init__.py  clusterer.py  docx_generator.py  embedder.py  jira_client.py  metrics.py  normalizer.py  ollama_client.py  slack_client.py  summarizer.py  webhooks.py
openapi/: .spectral.yaml
scripts/: audit-rust.sh  build-sidecar.sh  check_migration_safety.sh  clean-full.sh  clean.sh  dev-lean.sh  dev.sh  export_openapi.sh  migration_rehearsal.py  secret_scan.sh  verify-installation.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: client.ts  hooks.ts
src/components/: ChartExporter.tsx  ClusterView.tsx  ErrorBoundary.tsx  IncidentTable.tsx  LoadingSpinner.tsx  MetricsDashboard.tsx  ProgressIndicator.tsx  Toast.tsx
src/contexts/: ToastContext.tsx
src/hooks/: useDarkMode.ts  useToast.ts
src/pages/: ClustersPage.tsx  DashboardPage.tsx  IncidentsPage.tsx  ReportsPage.tsx  SettingsPage.tsx
src/types/: index.ts
src/utils/: chartExport.ts  stronghold.ts
tests/: stronghold.test.ts
