[package]
name = "incident-workbench"
version = "0.1.0"
edition = "2021"

[lib]
name = "incident_workbench_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "incident-workbench"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-stronghold = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-stronghold = "2"
